<resources>
    <string name="app_name">TestOnlineShop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--SignInFragment-->
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="already_hav">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>

    <!--LoginInFragment-->
    <string name="welcome_back">Welcome back</string>
    <string name="password">           Password</string>
    <string name="login">Login</string>

    <!--PageOneFragment-->
    <string name="trade_by_bata">Trade by bata</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="phones">Phones</string>
    <string name="samsung_s10">Samsung S10</string>
    <string name="thirty_percent">30 % off</string>
    <string name="kids">Kids</string>
    <string name="new_balance">New balance sneakers</string>
    <string name="thirty_three_dollars">$ 33,00</string>
    <string name="flash_sale">Flash sale</string>
    <string name="brands">Brands</string>

    <!--ProfileFragment-->
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="current_balance">$ 1593</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>

</resources>