<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    tools:context=".presentation.ProfileFragment">

    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="61.06dp"
        android:layout_height="61.06dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/user_photo" />

    <TextView
        android:id="@+id/bt_change_photo"
        android:layout_width="69dp"
        android:layout_height="11dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/montserrat_extralight"
        android:gravity="center"
        android:letterSpacing="-0.03"
        android:text="@string/change_photo"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_photo" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="168dp"
        android:layout_height="17dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/satria_adhi"
        android:textColor="@color/shade_of_black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_change_photo"
        tools:tag="@string/satria_adhi" />

    <Button
        android:id="@+id/bt_upload_item"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_marginTop="35dp"
        android:drawableLeft="@drawable/ic_upload"
        android:drawingCacheQuality="auto"
        android:fontFamily="@font/montserrat_alternates_semibold"
        android:text="@string/upload_item"
        android:textAllCaps="false"
        android:textColor="@color/light_grey"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="63dp" />

    <Button
        android:id="@+id/bt_trade_store"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_credit_card"
        android:drawableRight="@drawable/ic_arrow_right"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:text="@string/trade_store"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/bt_payment_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_upload_item" />

    <Button
        android:id="@+id/bt_payment_method"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_credit_card"
        android:drawableRight="@drawable/ic_arrow_right"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:text="@string/payment_method"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/bt_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bt_balance"
        android:layout_width="204dp"
        android:layout_height="65dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_credit_card"
        android:drawablePadding="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/balance"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/trade_history"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/trade_history"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_credit_card"
        android:drawableRight="@drawable/ic_arrow_right"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:text="@string/trade_history"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/restore_purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/restore_purchase"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_autorenew"
        android:drawableRight="@drawable/ic_arrow_right"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:text="@string/restore_purchase"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/help"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_help"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_log_out"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_logout"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user_balance"
        android:layout_width="204dp"
        android:layout_height="65dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_vertical|end"
        android:paddingRight="15dp"
        android:text="@string/current_balance"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/bt_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bt_balance"
        app:layout_constraintTop_toTopOf="@+id/bt_balance"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="58dp"
        android:backgroundTint="@color/design_default_color_background"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="63dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />


</androidx.constraintlayout.widget.ConstraintLayout>