<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    app:cardCornerRadius="11dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="174dp"
        android:layout_height="221dp"
        app:srcCompat="@drawable/flash_sale_example" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_discount"
            android:layout_width="49dp"
            android:layout_height="18dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_discount"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/thirty_percent"
            android:textColor="@color/design_default_color_background"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_flash_sale_category"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="114dp"
            android:layout_marginBottom="83dp"
            android:background="@drawable/shape_category_flash_sale"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_horizontal|center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/kids"
            android:textColor="@color/black"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="41dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/new_balance"
            android:textColor="@color/design_default_color_background"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_flash_sale_category"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_flash_sale_price"
            android:layout_width="43dp"
            android:layout_height="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="17dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center_vertical"
            android:text="@string/thirty_three_dollars"
            android:textColor="@color/design_default_color_background"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bt_add_to_favorite"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="49dp"
            android:layout_marginBottom="10dp"
            android:foreground="@drawable/ic_favorite_flash_sale"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_flash_sale_price" />

        <Button
            android:id="@+id/bt_add_flash_to_cart"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/shape_round_35x35"
            android:foreground="@drawable/ic_fab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/tv_seller_photo"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/seller_photo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>